--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,6 +4,7 @@ AllCops:
     - _site/**/*
     - node_modules/**/*
     - vendor/bundle/**/*
+    - bin/**/*
     - Rakefile
     - Gemfile
     - "*.gemspec"
