--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -28,6 +28,10 @@ Metrics/AbcSize:
   Enabled: false
 Metrics/ClassLength:
   Enabled: false
+Metrics/BlockLength:
+  Exclude:
+    - 'spec/**/*.rb'
+  ExcludedMethods: ['describe', 'context']
 
 Naming/FileName:
   Enabled: false
