--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,8 @@ jobs:
   build:
     strategy:
       matrix:
-        ruby: [2.5, 2.6, 2.7, 3.0]
+        # ruby: [2.5, 2.6, 2.7, 3.0]
+        ruby: [2.5, 2.6, 2.7]
         gemfile:
           - gemfiles/jekyll_3.8.gemfile
           - gemfiles/jekyll_3.9.gemfile
