Update rubocop and add extension rspec and rake

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,6 +11,8 @@ AllCops:
     - gemfiles/**/*
   NewCops: enable
 
+Layout/EmptyLineBetweenDefs:
+  Enabled: false
 Layout/EndOfLine:
   Enabled: false
 Layout/LineLength:
