--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,10 +15,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Ruby ${{ matrix.ruby }}
+      - name: Set up Ruby 2.7
         uses: actions/setup-ruby@v1
         with:
-          ruby-version: ${{ matrix.ruby }}
+          ruby-version: 2.7
       - name: bundle install
         run: |
           gem install bundler
@@ -32,6 +32,7 @@ jobs:
           if-no-files-found: error
           retention-days: 1
   build:
+    needs: pre-build
     strategy:
       matrix:
         # ruby: [2.5, 2.6, 2.7, 3.0]
