--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,12 @@ jobs:
       uses: actions/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby }}
+    - name: Create folder 'gemfiles'
+      run: mkdir -p gemfiles/
+    - uses: actions/download-artifact@v2
+      with:
+        name: appraisal-files
+        path: gemfiles/
     - name: bundle install
       run: |
         gem install bundler
